fix issues #1,#2, #3 for gutter array not properly updating, malaligned line numbers and hard to click fold markers. Extension now uses separate gutter for rendering fold markers. (credits - Miguel Castillo)

--- a/main.less
+++ b/main.less
@@ -1,25 +1,18 @@
 .cm-thehogfather-codefolding {
-    cursor: pointer;
     color: #777;
+    font-size: 15px;
 }
 
-.cm-thehogfather-codefolding span{
-    padding-left: 3px;
-}
-.cm-s-default .cm-thehogfather-codefolding-collapsed {
+.cm-s-default .codefolding-collapsed {
     .cm-thehogfather-codefolding;
 }
 
-.cm-s-default .cm-thehogfather-codefolding-expanded {
+.cm-s-default .codefolding-expanded {
     .cm-thehogfather-codefolding;
 }
 
-.cm-s-default div.CodeMirror-gutter {
-    min-width: 4.0em;
-}
-
-.cm-s-default .CodeMirror-linenumber{
-    margin-left: -10px!important;
+.CodeMirror-gutter.code-folding-gutter {
+    width: 10px;
 }
 
 .CodeMirror-foldmarker {
